<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_bar"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/rounded_search"
    android:clipToOutline="true"
    tools:targetApi="s">

    <ImageView
        android:id="@+id/iv_left_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_search"
        app:tint="?attr/colorOnBackground" />

    <EditText
        android:id="@+id/et_search_bar"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:fontFamily="@font/montserrat"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/text_hint_selector"
        android:textSize="16sp" />

    <ImageButton
        android:id="@+id/ib_clear_search"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/close_search"
        android:visibility="invisible"
        android:foregroundTint="?attr/colorOnBackground"
        app:tint="?attr/colorOnBackground" />

</LinearLayout>
